# charasay

./: Cargo.toml  license  readme.md
.cargo/: config.toml
.github/: codeowners
.github/workflows/: ci-cd.yml  gh-release.yml
src/: bubbles.rs  errors.rs  lib.rs  main.rs
src/charas/: aya.chara  chocobo.chara  cirno.chara  clefairy.chara  cow.chara  eevee.chara  ferris.chara  ferris1.chara  flareon.chara  goldeen.chara  growlithe.chara  kirby.chara  kitten.chara  mario.chara  mew.chara  nemo.chara  pikachu.chara  piplup.chara  psyduck.chara  remilia-scarlet.chara  seaking.chara  togepi.chara  tux.chara  wartortle.chara
