[package]
name = "charasay"
version = "0.1.0"
authors = ["Latif Sulistyo <latifsulistyo.me@gmail.com>"]
edition = "2021"
description = "The future of cowsay! Colorful character saying."
repository = "https://github.com/latipun7/charasay"
license = "MIT"
keywords = ["cowsay", "print", "ansi"]
categories = [
  "command-line-utilities",
  "value-formatting",
  "text-processing",
  "visualization",
  "rendering",
]

[dependencies]
clap = { version = "4.1.6", features = ["derive"] }
rust-embed = { version = "6.4.2", features = ["interpolate-folder-path"] }
textwrap = { version = "0.16.0", features = ["terminal_size"] }
unicode-width = "0.1.10"
regex = "1.7.1"
rand = "0.8.5"
