[package]
name = "charasay"
version = "3.3.2"
edition = "2021"
description = "The future of cowsay 🐮! Colorful characters saying something 🗨️."
readme = "readme.md"
repository = "https://github.com/latipun7/charasay"
license = "MIT"
keywords = ["ansi", "cowsay", "print"]
categories = [
  "command-line-utilities",
  "rendering",
  "text-processing",
  "value-formatting",
  "visualization",
]

[[bin]]
name = "chara"

[dependencies]
clap = { version = "4.6.1", features = ["derive"] }
clap_complete = "4.6.5"
rand = "0.10.1"
regex = "1.12.4"
rust-embed = { version = "8.11.0", features = ["debug-embed"] }
strip-ansi-escapes = "0.2.1"
textwrap = { version = "0.16.2", features = ["terminal_size"] }
unicode-width = "0.2.2"
